@@ -28,7 +28,7 @@ requires 'MARC::Convert::Wikidata::Object::ISBN' => 0;
 requires 'MARC::Convert::Wikidata::Object::Kramerius' => 0;
 requires 'MARC::Convert::Wikidata::Object::People' => 0;
 requires 'MARC::Convert::Wikidata::Object::Publisher' => 0;
-requires 'MARC::Convert::Wikidata::Object::Series' => 0;
+requires 'MARC::Convert::Wikidata::Object::Series' => 0.04;
 requires 'MARC::Leader' => 0;
 requires 'Mo::utils' => 0.08;
 requires 'Readonly' => 0;
