@@ -1,5 +1,7 @@
 0.10
  - Add missing requires.
+ - Rewrite to new MARC::Convert::Wikidata::Object::Series with publisher
+   object.
 
 0.09 2024-06-25T08:35:41+02:00
  - Add another publishing places cleanup (Ve Praze, We Praze). Thanks Josef
